# generic_microservice_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.py
.github/workflows/: blank.yml  ci.yml  docker-builder.yaml  docker-publish.yml  push.yml
cmake/: common.cmake
db/: CMakeLists.txt
db/src/: CMakeLists.txt  Database.hpp  DatabaseServer.hpp  SQLiteWrapper.cpp  SQLiteWrapper.hpp  main.cpp  sqliteConfig.hpp
db/tests/: CMakeLists.txt  SQLiteWrapperTest.cpp
doc/: README.md
doc/drawio/: blockDiagram.drawio
doc/softwareDesign/: README.md
doc/studies/: softwareArchitecturePatterns.md
hello/: CMakeLists.txt
hello/src/client/: CMakeLists.txt
hello/src/server/: CMakeLists.txt  main.cpp
protos/: CMakeLists.txt  database.proto  db.proto  hello.proto
src/hello/: CMakeLists.txt
src/hello/client/: main.cpp
test/: CMakeLists.txt  example.cpp
